Se elimina Dockerfile. Se ajusta docker-compose por errores de logueo en rabbitmq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,34 @@
-version: "2.15"
 services:
-  rabbitmq:
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    container_name: rabbitmq
-    restart: always
-    ports:
-      - 5002:15672
-      - 5003:5672
-    hostname: stats
-    volumes:
-      - ./data:/var/lib/rabbitmq/mnesia
-    environment:
-      RABBITMQ_DEFAULT_USER: nc39349
-      RABBITMQ_DEFAULT_PASS: prueba123
-      vm_memory_high_watermark.relative: 0.1
-    networks:
-      rabbitmq_net:
-        aliases:
-          - rabbitmq_host
+        rabbitmq:
+              image: rabbitmq:3-management
+              container_name: rabbitmq_management
+
+              ports:
+                - 5002:15672 # communication with the web management API
+                - 5003:5672  # comunicacion desde una api
+                - 5004:25672 # (erlang) communication between the nodes and CLI tool
+
+              volumes:
+                # data persistence
+                - /docker_conf/rabbitmq/data/:/var/lib/rabbitmq/
+                # data mapping -> host: container
+                # queues and messages data of the container will be stored on the host
+              environment:
+                RABBITMQ_DEFAULT_USER : nc39349
+                RABBITMQ_DEFAULT_PASS : prueba123
+                vm_memory_high_watermark.relative: 0.1
+
+              restart: always
+              networks:
+                rabbitmq_net:
+                  aliases:
+                    - rabbitmq_host
+
 volumes:
-  data: {}
+    data: {}
+    logs-folder:
+        name: log_rabbitmq_management
+        driver: local
 networks:
   rabbitmq_net:
     name: rabbitmq_network
